# anvil

./: .env.example  .gitignore  DECISIONS.md  README.md  RUN_WITH_KEYS.md  docker-compose.yml  pyproject.toml
baselines/: retrieval_baseline.json
corpus/: PROVENANCE.json  advanced-additional-responses.md  advanced-additional-status-codes.md  advanced-advanced-dependencies.md  advanced-advanced-python-types.md  advanced-async-tests.md  advanced-behind-a-proxy.md  advanced-custom-response.md  advanced-dataclasses.md  advanced-events.md  advanced-generate-clients.md  advanced-index.md  advanced-json-base64-bytes.md  advanced-middleware.md  advanced-openapi-callbacks.md  advanced-openapi-webhooks.md  advanced-path-operation-advanced-configuration.md  advanced-response-change-status-code.md  advanced-response-cookies.md  advanced-response-directly.md  advanced-response-headers.md  advanced-security-http-basic-auth.md  advanced-security-index.md  advanced-security-oauth2-scopes.md  advanced-settings.md  advanced-stream-data.md  advanced-strict-content-type.md  advanced-sub-applications.md  advanced-templates.md  advanced-testing-dependencies.md  advanced-testing-events.md  advanced-testing-websockets.md  advanced-using-request-directly.md  advanced-websockets.md  advanced-wsgi.md  async.md  deployment-cloud.md  deployment-concepts.md  deployment-docker.md  deployment-fastapicloud.md  (+74 more)
fixtures/: agent_eval_cases.jsonl  agent_eval_scripts.json
goldens/: agent.jsonl  retrieval.jsonl
scripts/: fetch_corpus.py
tests/: conftest.py  fakes.py  test_a2a.py  test_agent_graph.py  (+9 more)
(+29 files in other folders)
