[project]
name = "anvil"
version = "0.1.0"
description = "Support agent over real product docs (FastAPI as the worked example): hybrid RAG, LangGraph tools with HITL, golden-set evals from real user questions, CI regression gate, cost ledger."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "sentence-transformers>=3.0",
    "mcp>=1.9",
    "langfuse>=3.0",
]

[project.scripts]
anvil = "anvil.cli:cli"
anvil-mcp = "anvil.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anvil"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
